Added a huge part of whole presentation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,156 @@
         </section>
 
         <section>
-            <h1>Co to jest <strong>programowanie</strong>?</h1>
+            <section>
+                <h1>Co to jest <strong>programowanie</strong>?</h1>
+            </section>
+            <section>
+                <ul>
+                    <span class="fragment"><li>Ciekawe zajęcie</li></span>
+                    <span class="fragment"><li>Ciągłe rozwiązywanie problemów i zagadek w kreatywny sposób</li></span>
+                    <span class="fragment"><li>Żmudna i pracochłonna praca wymagająca zaangażowania i ciągłej nauki</li></span>
+                </ul>
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h2>Jak zostać programistą?</h2>
+                <p>
+                    <img width="400" height="400" src="img/being-a-programmer.png">
+                </p>
+            </section>
+            <section>
+                <ul>
+                    <span class="fragment"><li>Nie zostaniesz programista w jeden wieczor</li></span>
+                    <span class="fragment"><li>Badz wytrwaly i zdeterminowany</li></span>
+                    <span class="fragment"><li>Ucz się języka angielskiego</li></span>
+                    <span class="fragment"><li>Nie boj się analitycznego myslenia</li></span>
+                    <span class="fragment"><li>PROGRAMUJ!</li></span>
+                </ul>
+            </section>
+            <section>
+                <h5>1/10 talentu + 9/10 ciężkiej pracy = <strong>SUKCES</strong></h5>
+                <p>
+                    <img width="600" height="400" src="img/success.jpg">
+                </p>
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h1>Języki programowania</h1>
+            </section>
+            <section>
+                <p><strong>Język programowania</strong> to język rozumiany przez programistow.</p>
+            </section>
+            <section>
+                <p>Proces tlumaczenia kodu napisanego w danym języku na kod rozumiany przez komputer nazywa się <strong>kompilacją</strong>.
+                </p>
+            </section>
+            <section>
+                <p>Języki programowania dzielimy na <strong>niskopoziomowe</strong> i <strong>wysokopoziomowe</strong>.
+                </p>
+            </section>
+            <section>
+                <h2>Nieskopoziomowe</h2>
+                <ul>
+                    <span class="fragment"><li>Operowanie bezposrednio na pamięci komputera</li></span>
+                    <span class="fragment"><li>Bliskie powiazanie ze sprzetem</li></span>
+                    <span class="fragment"><li>Wymagana znajomosc architektury sprzętowej</li></span>
+                    <span class="fragment"><li>Duzo trudniejsze niz języki wysokopoziomowe</li></span>
+                </ul>
+                <p class="fragment">
+                    Przyklady: assembler, C
+                </p>
+            </section>
+            <section>
+                <h2>Wysokopoziomowe</h2>
+                <ul>
+                    <span class="fragment"><li>Daje duzo wieksze wsparcie programiscie w codziennej pracy</li></span>
+                    <span class="fragment"><li>Naklada warstwy abstrakcji na sprzęt - nie wymaga znajomosci architektury</li></span>
+                    <span class="fragment"><li>Daje latwiejsze zarzadzanie pamiecia</li></span>
+                    <span class="fragment"><li>Latwiejszy w uzyciu niz języki niskopoziomowe</li></span>
+                </ul>
+                <p class="fragment">
+                    Przyklady: Java, Go, JavaScript, C++
+                </p>
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <p>
+                    <img src="img/java.png">
+                </p>
+            </section>
+            <section>
+                <p>
+                    <img src="img/goslingNaughtonSheridan.jpg"/>
+                </p>
+            </section>
+            <section>
+                <p>
+                <ul>
+                    <li>Lipiec 1991r.</li>
+                    <li>James Gosling, Mike Sheridan, Patrick Naughton</li>
+                    <li>Telewizja interaktywna</li>
+                    <li>Dąb, zieleń i kawa</li>
+                    <li>Smalltalk i C++</li>
+                    <li>Sun Microsystems i 1996r.</li>
+                    <li>"Write Once, Run Anywhere" (WORA)</li>
+                </ul>
+                </p>
+            </section>
+            <section>
+                <h2>Java jest obiektowa</h2>
+                <p class="fragment">
+                    Object Oriented Programming
+                </p>
+            </section>
+            <section>
+                <h3>Przykład</h3>
+                <p>Stół i jego projekt.</p>
+                <p>Projekt stołu = typ (klasa)</p>
+                <p>Kazdy wyprodukowany stół = instancja (obiekt) typu (klasy) Stół</p>
+            </section>
+            <section>
+                <h3>Język zorientowany obiektowo to język pozwalajacy na tworzenie wlasnych typow (klas).</h3>
+            </section>
+            <section>
+                <h2>Java jest niezalezna od architektury</h2>
+                <p class="fragment">
+                    Maszyna wirtualna
+                </p>
+            </section>
+            <section>
+                <h3>Maszyna wirtualna</h3>
+                <ul>
+                    <span class="fragment"><li>Program niskiego poziomu, na ktorym uruchamiany jest kazdy program napisany w Javie</li></span>
+                    <span class="fragment"><li>Jest bramka pomiedzy kodem napisanym w Javie a sprzetem komputerowym (procesorem, pamiecia)</li></span>
+                    <span class="fragment"><li>Odpowiada za zarzadzanie pamiecia</li></span>
+                </ul>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h1>Środowisko pracy programisty</h1>
+            </section>
+            <section>
+                <h2>Must have:</h2>
+                <ul>
+                    <li>JDK i JRE</li>
+                    <li>IDE</li>
+                </ul>
+            </section>
+            <section>
+                <p>
+                    <strong>JDK</strong> - Java Development Kit
+                </p>
+                <p>
+                    <strong>JRE</strong> - Java Runtime Environment
+                </p>
+            </section>
         </section>
 
         <section>
@@ -111,6 +260,13 @@
     });
 
     Reveal.configure({ slideNumber: true });
+
+
+
+
+
+
+
 
 
 
