Added info about IDE

--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
                     <strong>JRE</strong> - Java Runtime Environment
                 </p>
             </section>
+            <section>
+                <p><strong>IDE (Integrated Development Environment)</strong>- Zintegrowane srodowisko programistyczne</p>
+                <p class="fragment">
+                    <img width="400" height="300" src="img/idea.png">
+                </p>
+            </section>
         </section>
 
         <section>
