Added slides about ide and jdk

--- a/index.html
+++ b/index.html
@@ -204,10 +204,98 @@
                 </p>
             </section>
             <section>
-                <p><strong>IDE (Integrated Development Environment)</strong>- Zintegrowane srodowisko programistyczne</p>
+                <p><strong>IDE (Integrated Development Environment)</strong>- Zintegrowane srodowisko programistyczne
+                </p>
                 <p class="fragment">
                     <img width="400" height="300" src="img/idea.png">
                 </p>
+            </section>
+        </section>
+
+        <section>
+            <section>
+                <h2>Przygotowanie środowiska pracy programisty</h2>
+                <h5>Instalacja Javy 11 i Intellij IDEA Community</h5>
+            </section>
+            <section>
+                <a href="https://adoptopenjdk.net/index.html?variant=openjdk11&jvmVariant=hotspot" target="_blank">Java
+                    11 - KLIK!</a>
+                <br/>
+                <br/>
+                <a href="https://www.jetbrains.com/idea/download/#section=windows" target="_blank">Intellij IDEA
+                    Community - KLIK!</a>
+            </section>
+            <section>
+                <h2>Instalacja - Java 11</h2>
+            </section>
+            <section>
+                <img src="img/jdk1.png">
+            </section>
+            <section>
+                <img src="img/jdk2.png">
+            </section>
+            <section>
+                <img src="img/jdk3.png">
+            </section>
+            <section>
+                <img src="img/jdk4.png">
+            </section>
+            <section>
+                <img src="img/jdk5.png">
+            </section>
+            <section>
+                <img src="img/jdk6.png">
+            </section>
+            <section>
+                <img src="img/jdk7.png">
+            </section>
+            <section>
+                <img src="img/jdk8.png">
+            </section>
+            <section>
+                <img src="img/jdk9.png">
+            </section>
+            <section>
+                <img src="img/jdk10.png">
+            </section>
+            <section>
+                <h2>Instalacja - Intellij IDEA Community</h2>
+            </section>
+            <section>
+                <img src="img/ide1.png">
+            </section>
+            <section>
+                <img src="img/ide2.png">
+            </section>
+            <section>
+                <img src="img/ide3.png">
+            </section>
+            <section>
+                <img src="img/ide4.png">
+            </section>
+            <section>
+                <img src="img/ide5.png">
+            </section>
+            <section>
+                <h2>Pierwszy projekt w Javie</h2>
+            </section>
+            <section>
+                <img src="img/project1.png">
+            </section>
+            <section>
+                <img src="img/project2.png">
+            </section>
+            <section>
+                <img src="img/project3.png">
+            </section>
+            <section>
+                <img src="img/project4.png">
+            </section>
+            <section>
+                <img src="img/project5.png">
+            </section>
+            <section>
+                <img src="img/project6.png">
             </section>
         </section>
 
@@ -266,23 +354,6 @@
     });
 
     Reveal.configure({ slideNumber: true });
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </script>
 
