Added polish characters

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Podstawy programowania w Javie</title>
 
-    <meta name="description" content="Prezentacja do prelekcji o zmianach jakie zaszly w Javie w wersji 9 i 10">
+    <meta name="description" content="Warsztaty z programowania w Javie">
     <meta name="author" content="Piotr Hendzel">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -45,7 +45,7 @@
                 </p>
             </section>
             <section>
-                <h2>Czlonek kapituly Rzeszow Java User Group</h2>
+                <h2>Członek kapituły Rzeszów Java User Group</h2>
                 <p>
                     <img src="img/logo_rjug.jpg">
                 </p>
@@ -54,7 +54,7 @@
 
         <section>
             <section>
-                <h1>Co to jest <strong>programowanie</strong>?</h1>
+                <h1>Co to jest <strong>programowanie?</strong>?</h1>
             </section>
             <section>
                 <ul>
@@ -74,10 +74,10 @@
             </section>
             <section>
                 <ul>
-                    <span class="fragment"><li>Nie zostaniesz programista w jeden wieczor</li></span>
-                    <span class="fragment"><li>Badz wytrwaly i zdeterminowany</li></span>
+                    <span class="fragment"><li>Nie zostaniesz programistą w jeden wieczór</li></span>
+                    <span class="fragment"><li>Bądź wytrwały i zdeterminowany</li></span>
                     <span class="fragment"><li>Ucz się języka angielskiego</li></span>
-                    <span class="fragment"><li>Nie boj się analitycznego myslenia</li></span>
+                    <span class="fragment"><li>Nie bój się analitycznego myślenia</li></span>
                     <span class="fragment"><li>PROGRAMUJ!</li></span>
                 </ul>
             </section>
@@ -94,10 +94,10 @@
                 <h1>Języki programowania</h1>
             </section>
             <section>
-                <p><strong>Język programowania</strong> to język rozumiany przez programistow.</p>
+                <p><strong>Język programowania</strong> to język rozumiany przez programistów.</p>
             </section>
             <section>
-                <p>Proces tlumaczenia kodu napisanego w danym języku na kod rozumiany przez komputer nazywa się <strong>kompilacją</strong>.
+                <p>Proces tłumaczenia kodu napisanego w danym języku na kod rozumiany przez komputer nazywa się <strong>kompilacją</strong>.
                 </p>
             </section>
             <section>
@@ -105,27 +105,27 @@
                 </p>
             </section>
             <section>
-                <h2>Nieskopoziomowe</h2>
+                <h2>Niskopoziomowe</h2>
                 <ul>
-                    <span class="fragment"><li>Operowanie bezposrednio na pamięci komputera</li></span>
-                    <span class="fragment"><li>Bliskie powiazanie ze sprzetem</li></span>
-                    <span class="fragment"><li>Wymagana znajomosc architektury sprzętowej</li></span>
-                    <span class="fragment"><li>Duzo trudniejsze niz języki wysokopoziomowe</li></span>
+                    <span class="fragment"><li>Operowanie bezpośrednio na pamięci komputera</li></span>
+                    <span class="fragment"><li>Bliskie powiązanie ze sprzętem</li></span>
+                    <span class="fragment"><li>Wymagana znajomość architektury sprzętowej</li></span>
+                    <span class="fragment"><li>Dużo trudniejsze niz języki wysokopoziomowe</li></span>
                 </ul>
                 <p class="fragment">
-                    Przyklady: assembler, C
+                    Przykłady: assembler, C
                 </p>
             </section>
             <section>
                 <h2>Wysokopoziomowe</h2>
                 <ul>
-                    <span class="fragment"><li>Daje duzo wieksze wsparcie programiscie w codziennej pracy</li></span>
-                    <span class="fragment"><li>Naklada warstwy abstrakcji na sprzęt - nie wymaga znajomosci architektury</li></span>
-                    <span class="fragment"><li>Daje latwiejsze zarzadzanie pamiecia</li></span>
-                    <span class="fragment"><li>Latwiejszy w uzyciu niz języki niskopoziomowe</li></span>
+                    <span class="fragment"><li>Daje dużo większe wsparcie programiście w codziennej pracy</li></span>
+                    <span class="fragment"><li>Nakłada warstwy abstrakcji na sprzęt - nie wymaga znajomości architektury</li></span>
+                    <span class="fragment"><li>Daje łatwiejsze zarządzanie pamiecią</li></span>
+                    <span class="fragment"><li>Łatwiejszy w użyciu niż języki niskopoziomowe</li></span>
                 </ul>
                 <p class="fragment">
-                    Przyklady: Java, Go, JavaScript, C++
+                    Przykłady: Java, Go, JavaScript, C++
                 </p>
             </section>
         </section>
@@ -164,13 +164,13 @@
                 <h3>Przykład</h3>
                 <p>Stół i jego projekt.</p>
                 <p>Projekt stołu = typ (klasa)</p>
-                <p>Kazdy wyprodukowany stół = instancja (obiekt) typu (klasy) Stół</p>
+                <p>Każdy wyprodukowany stół = instancja (obiekt) typu (klasy) Stół</p>
             </section>
             <section>
-                <h3>Język zorientowany obiektowo to język pozwalajacy na tworzenie wlasnych typow (klas).</h3>
+                <h3>Język zorientowany obiektowo to język pozwalający na tworzenie własnych typów (klas).</h3>
             </section>
             <section>
-                <h2>Java jest niezalezna od architektury</h2>
+                <h2>Java jest niezależna od architektury</h2>
                 <p class="fragment">
                     Maszyna wirtualna
                 </p>
@@ -178,9 +178,9 @@
             <section>
                 <h3>Maszyna wirtualna</h3>
                 <ul>
-                    <span class="fragment"><li>Program niskiego poziomu, na ktorym uruchamiany jest kazdy program napisany w Javie</li></span>
-                    <span class="fragment"><li>Jest bramka pomiedzy kodem napisanym w Javie a sprzetem komputerowym (procesorem, pamiecia)</li></span>
-                    <span class="fragment"><li>Odpowiada za zarzadzanie pamiecia</li></span>
+                    <span class="fragment"><li>Program niskiego poziomu, na którym uruchamiany jest każdy program napisany w Javie</li></span>
+                    <span class="fragment"><li>Jest to bramka pomiędzy kodem napisanym w Javie a sprzętem komputerowym (procesorem, pamięcia)</li></span>
+                    <span class="fragment"><li>Odpowiada za zarządzanie pamięcią</li></span>
                 </ul>
             </section>
         </section>
@@ -204,7 +204,7 @@
                 </p>
             </section>
             <section>
-                <p><strong>IDE (Integrated Development Environment)</strong>- Zintegrowane srodowisko programistyczne
+                <p><strong>IDE (Integrated Development Environment)</strong>- Zintegrowane środowisko programistyczne
                 </p>
                 <p class="fragment">
                     <img width="400" height="300" src="img/idea.png">
@@ -352,7 +352,7 @@ public class Person {
             </section>
             <section>
                 <ul>
-                    <li>Dopuszczalne są litery, cyfry. Znak "_" traktowany jest jako litera.</li>
+                    <li>Dopuszczalne są litery, cyfry. Znak "_" traktowany jest jako litera</li>
                     <li>Wielkość liter ma znaczenie</li>
                     <li>Dopuszczalne są znaki narodowe (ale ich używanie jest złą praktyką!)</li>
                     <li>Brak ograniczenia długości</li>
