Fixed size of images

--- a/index.html
+++ b/index.html
@@ -280,22 +280,22 @@
                 <h2>Pierwszy projekt w Javie</h2>
             </section>
             <section>
-                <img src="img/project1.png">
+                <img src="img/project1.png" height="620px">
             </section>
             <section>
-                <img src="img/project2.png">
+                <img src="img/project2.png" height="620px">
             </section>
             <section>
-                <img src="img/project3.png">
+                <img src="img/project3.png" height="620px">
             </section>
             <section>
-                <img src="img/project4.png">
+                <img src="img/project4.png" height="620px">
             </section>
             <section>
-                <img src="img/project5.png">
+                <img src="img/project5.png" height="620px">
             </section>
             <section>
-                <img src="img/project6.png">
+                <img src="img/project6.png" height="620px">
             </section>
         </section>
 
