Added new section to traning the java skills

--- a/index.html
+++ b/index.html
@@ -403,6 +403,31 @@ Long countOfProduct;
                 </table>
             </p>
             </section>
+            <section>
+                <h1>Zadanie nr 1</h1>
+                <p>Utwórz nową klasę w utworzonym na początku warsztatów projekcie "helloWorld". Klasa powinna mieć nazwę Person. Utwórz dwa pola tej klasy: name oraz surname.</p>
+            </section>
+            <section>
+                <h1>Metoda</h1>
+            </section>
+            <section>
+                <h1>Zadanie nr 2</h1>
+                <p>W istniejącej klasie Person dodaj metodę o nazwie introduceYourself. Metoda powinna zwrócić imię i nazwisko danej osoby w następującym formacie: "Nazywam się {imię} {nazwisko}.</p>
+            </section>
+            <section>
+                <h1>Obiekt</h1>
+            </section>
+            <section>
+                <h1>Zadanie nr 3</h1>
+                <p>Do klasy Person dodaj konstruktor z parametrami: name i surname. Wykorzystaj nowo utworzony konstruktor do utworzenia obiektu klasy Person w klasie Main w metodzie main. Na nowo utworzonym obiekcie wywołaj metodę introduceYourself. Następnie uruchom projekt.</p>
+            </section>
+            <section>
+                <h1>Modyfikatory dostępu</h1>
+            </section>
+            <section>
+                <h1>Zadanie nr 4</h1>
+                <p>Do klasy Person dodaj konstruktor bezparametrowy. Uzupełnij klasę o gettery i settery. Spraw by wszystkie pola klasy Person były niedostępne poza tą klasą. Utwórz obiekt klasy Person. Zainicjalizuj jego pola z użyciem setterów. Następnie wyświelt imię i nazwisko osoby z użyciem getterów. Format dowolny.</p>
+            </section>
         </section>
 
         <section>
